serial ttys.  Specifying fully specified devices like
/dev/ttyUSB0:im871a:c1 will also not probe the other serial ttys.
Only specifying auto or a generic device type im871a that requires a
serial tty, will probe the serial devices, exluding donotprobe ones.)

Added support for the sontex868 heat cost allocator.

Jacek27 added support for the Ultrimis water meter.
Thanks Jacek27!

Version 1.0.1: 2020-10-26

Fix bug that prevented /dev/ttyUSB0:im871a:c1 to work.
Fix bug in install.sh that did not add wmbusmeters to the plugdev group.

Add --ignoreduplicates (ignoreduplicates=true) to ignore
any duplicates. It remembers a history of 10 telegrams.
This is useful when you have multiple dongles for covering
a larger area of reception, but sometimes telegrams arrive
at multiple dongles at the same time.

Add proper support for FlowIQ2200 water meter.
Decode two vendor values in multical603 as energy forward and returned.
Accept t1 and c1 as linkmodes for multical21 meters.

Version 1.0.0: 2020-10-25

IMPORTANT CHANGES THAT MIGHT AFFECT YOU!

** BREAKING No udev rules

Wmbusmeters new default behaviour is to never exit if no wmbus
device is found. It stays running all the time even if no
wmbus device is detected. As soon as a device is inserted
it will detect/configure and start using the device.

(When reading stdin and files, then wmbusmeters will of course exit
as soon as there is no more data or stdin is closed.)

This means that the udev rules no longer are needed and must be
removed. This will be done automatically by the install script.

** BREAKING The background rtlwmbus/rtl433 command must be wrapped in CMD(...)

If you used your own command xxx to start rtlsdr+rtlwmbus then that command
was previously supplied like this rtlwmbus:xxx
You must now type rtlwmbus:CMD(xxx)

** There is a possibility to identify some dongles with their id.

The im871a/amb8465/rtlsdr dongles have an id. This id is printed when