@@ -175,3 +175,8 @@ telegram=|4E44B40512345678F1077A310040052F2F|01FD08040C13991848004C1359423500CC1
 telegram=|2E4401069897969501167A4B0320052F2F|0413320C000003FD1700000044132109000004933C000000002F2F2F2F2F|+0
 {"media":"cold water","meter":"ultrimis","name":"Uater","id":"95969798","total_m3":3.122,"target_m3":2.337,"current_status":"OK","total_backward_flow_m3":0,"timestamp":"1111-11-11T11:11:11Z"}
 |Uater;95969798;3.122000;2.337000;OK;0.000000;1111-11-11 11:11.11
+
+# Test Sensostar 2 heat meter
+telegram=|9E44C5147956341200047A7B0090052F2F|046D25248A2B04063D1F000001FD17000415265F00004406131F0000840106901E0000C40106841E0000840206841E0000C402067A1E0000840306541E0000C40306021E00008404069E1D0000C40406D71C0000840506F21B0000C40506681A00008406061E190000C40606EB1700008407061C170000C40706EE1600002F2F2F2F2F2F2F2F2F2F2F2F2F2F2F2F|
+{"media":"heat","meter":"sensostar","name":"Heater","id":"12345679","meter_timestamp":"2020-11-10 04:37","total_kwh":7997,"total_water_m3":2435.8,"current_status":"OK","timestamp":"1111-11-11T11:11:11Z"}
+|Heater;12345679;7997.000000;2435.800000;OK;1111-11-11 11:11.11
