@@ -36,10 +36,12 @@ METERS="MyWarmWater supercom587 12345678 NOKEY
       Vatten      apator08    004444dd NOKEY
       Wasser      rfmtx1      74737271 NOKEY
       Woter       waterstarm  20096221 BEDB81B52C29B5C143388CBB0D15A051
-      Witer       topaseskr   78563412 NOKEY"
+      Witer       topaseskr   78563412 NOKEY
+      Heater      sensostar   12345679 NOKEY"
+
 
 cat simulations/simulation_t1.txt | grep '^{' > $TEST/test_expected.txt
-$PROG --format=json simulations/simulation_t1.txt $METERS  > $TEST/test_output.txt 2> $TEST/test_stderr.txt
+$PROG --format=json simulations/simulation_t1.txt $METERS > $TEST/test_output.txt 2> $TEST/test_stderr.txt
 if [ "$?" = "0" ]
 then
     cat $TEST/test_output.txt | sed 's/"timestamp":"....-..-..T..:..:..Z"/"timestamp":"1111-11-11T11:11:11Z"/' > $TEST/test_responses.txt
@@ -51,6 +53,10 @@ then
     else
         TESTRESULT="ERROR"
     fi
+else
+    echo "wmbusmeters returned error code: $?"
+    cat $TEST/test_output.txt
+    cat $TEST/test_stderr.txt
 fi
 
 cat simulations/simulation_t1.txt | grep '^|' | sed 's/^|//' > $TEST/test_expected.txt
@@ -66,6 +72,10 @@ then
     else
         TESTRESULT="ERROR"
     fi
+else
+    echo "wmbusmeters returned error code: $?"
+    cat $TEST/test_output.txt
+    cat $TEST/test_stderr.txt
 fi
 
 
